# Project_CGAL

./: .~lock.Convex_Closed_Constraints_results.csv#  .~lock.Non_Convex_Parallel_results.csv#  .~lock.Non_Convex_Parallel_results.ods#  CMakeLists.txt  Convex_Closed_Constraints_results.csv  Convex_Closed_Constraints_results.txt  Convex_No_Constraints_results.csv  Convex_No_Constraints_results.txt  Convex_Open_Constraints_results.csv  Convex_Open_Constraints_results.txt  Non_Convex_Irregular_results.csv  Non_Convex_Irregular_results.ods  Non_Convex_Irregular_results.txt  Non_Convex_Parallel_results.ods  Non_Convex_Parallel_results.txt  README.md  run_tests.sh  test.cpp  traingulation.md
data/: input.json  input_ant.json  input_ls.json  input_sa.json  output.json  output_ant.json  output_ls.json  output_sa.json
include/: algorithms.hpp  centroidMethod.hpp  circumCenterMethod.hpp  jsonUtils.hpp  midpointMethod.hpp  midpointsMethod.hpp  oneCentroid.hpp  projectionMethod.hpp  triangulation.hpp  triangulationMethod.hpp  triangulationUtils.hpp
research_readme/: Convex_Closed_Constraints_results.csv  Convex_No_Constraints_results.csv  Convex_No_Constraints_results.ods  Convex_Open_Constraints_results.ods  Non_Convex_Irregular_results.csv  Non_Convex_Parallel_results.csv  final_script.sh  run_tests.sh
results/: ortho_100_bd1e4a14.instance.output.json  ortho_10_d2723dcc.instance.output.json  ortho_150_53eb4022.instance.output.json  ortho_20_5a9e8244.instance.output.json  ortho_20_e2aff192.instance.output.json  ortho_250_3b977f7e.instance.output.json  ortho_250_6e6a66c2.instance.output.json  ortho_40_56a6f463.instance.output.json  ortho_40_df58ce3b.instance.output.json  ortho_60_5c5796a0.instance.output.json  ortho_60_c423f527.instance.output.json  ortho_60_f744490d.instance.output.json  ortho_80_06ee55d4.instance.output.json  point-set_100_0245ce31.instance.output.json  point-set_100_05594822.instance.output.json  point-set_100_dd67678e.instance.output.json  point-set_10_13860916.instance.output.json  point-set_10_4bcb7c21.instance.output.json  point-set_10_7451a2a9.instance.output.json  point-set_10_97578aae.instance.output.json  (+130 more)
src/: algorithms.cpp  main.cpp  (+7 more)
